chore: some disbled tests pass