@@ -12,6 +12,7 @@ import static school.hei.haapi.endpoint.rest.model.FeeTypeEnum.TUITION;
 import static school.hei.haapi.integration.StudentIT.student1;
 import static school.hei.haapi.integration.conf.TestUtils.FEE1_ID;
 import static school.hei.haapi.integration.conf.TestUtils.FEE2_ID;
+import static school.hei.haapi.integration.conf.TestUtils.FEE3_ID;
 import static school.hei.haapi.integration.conf.TestUtils.MANAGER1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.MONITOR1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_ID;
@@ -22,28 +23,25 @@ import static school.hei.haapi.integration.conf.TestUtils.assertThrowsApiExcepti
 import static school.hei.haapi.integration.conf.TestUtils.assertThrowsForbiddenException;
 import static school.hei.haapi.integration.conf.TestUtils.creatableFee1;
 import static school.hei.haapi.integration.conf.TestUtils.creatableStudentFee;
+import static school.hei.haapi.integration.conf.TestUtils.createFeeForTest;
 import static school.hei.haapi.integration.conf.TestUtils.fee1;
 import static school.hei.haapi.integration.conf.TestUtils.fee2;
 import static school.hei.haapi.integration.conf.TestUtils.fee3;
 import static school.hei.haapi.integration.conf.TestUtils.fee4;
 import static school.hei.haapi.integration.conf.TestUtils.setUpCognito;
 import static school.hei.haapi.integration.conf.TestUtils.setUpS3Service;
-import static school.hei.haapi.integration.conf.TestUtils.updatableStudentFee;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.Query;
 import java.time.Instant;
 import java.util.List;
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.event.consumer.EventConsumer;
-import school.hei.haapi.endpoint.event.consumer.model.ConsumableEvent;
-import school.hei.haapi.endpoint.event.consumer.model.TypedEvent;
-import school.hei.haapi.endpoint.event.model.UpdateFeesStatusToLateTriggered;
 import school.hei.haapi.endpoint.rest.api.PayingApi;
 import school.hei.haapi.endpoint.rest.client.ApiClient;
 import school.hei.haapi.endpoint.rest.client.ApiException;
@@ -56,6 +54,7 @@ import school.hei.haapi.integration.conf.TestUtils;
 
 @Testcontainers
 @AutoConfigureMockMvc
+@Slf4j
 class FeeIT extends FacadeITMockedThirdParties {
   @Autowired EventConsumer subject;
   @Autowired EntityManager entityManager;
@@ -88,44 +87,35 @@ class FeeIT extends FacadeITMockedThirdParties {
   }
 
   @Test
-  @Disabled
-  void update_fee_status_payment_is_persisted() {
-    UpdateFeesStatusToLateTriggered feesStatusToLateTriggered =
-        UpdateFeesStatusToLateTriggered.builder().build();
-
-    TypedEvent typedEvent =
-        new TypedEvent(
-            "school.hei.haapi.endpoint.event.model.UpdateFeesStatusToLateTriggered",
-            feesStatusToLateTriggered);
-    ConsumableEvent consumableEvent = new ConsumableEvent(typedEvent, null, null);
-    subject.accept(List.of(consumableEvent));
-  }
-
-  @Test
-  @Disabled("dirty")
   void manager_delete_ok() throws ApiException {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     PayingApi api = new PayingApi(manager1Client);
 
-    Fee deletedFee = api.deleteStudentFeeById(FEE1_ID, STUDENT1_ID);
-    assertEquals(fee1(), deletedFee);
+    Fee createdFee = api.createStudentFees(STUDENT1_ID, List.of(createFeeForTest())).getFirst();
+
+    Fee deletedFee = api.deleteStudentFeeById(createdFee.getId(), STUDENT1_ID);
 
     List<Fee> fees = api.getStudentFees(STUDENT1_ID, 1, 5, null);
     assertFalse(fees.contains(deletedFee));
 
     // test: check if the payment is not deleted but has been flagged as deleted.
-    school.hei.haapi.model.Fee actualFeeData = getFeeByIdWithoutJpaFiltering(FEE1_ID);
+    school.hei.haapi.model.Fee actualFeeData = getFeeByIdWithoutJpaFiltering(deletedFee.getId());
     assertTrue(actualFeeData.isDeleted());
   }
 
   @Test
-  @Disabled
   void student_read_ok() throws ApiException {
     ApiClient student1Client = anApiClient(STUDENT1_TOKEN);
     PayingApi api = new PayingApi(student1Client);
 
     Fee actualFee = api.getStudentFeeById(STUDENT1_ID, FEE1_ID);
-    List<Fee> actual = api.getStudentFees(STUDENT1_ID, 1, 5, null);
+    Fee test = api.getStudentFeeById(STUDENT1_ID, FEE3_ID);
+
+    assertEquals(test, fee3());
+
+    List<Fee> actual = api.getStudentFees(STUDENT1_ID, 1, 20, null);
+
+    log.info(String.valueOf(actual.size()));
 
     assertEquals(fee1(), actualFee);
     assertTrue(actual.contains(fee1()));
@@ -157,13 +147,12 @@ class FeeIT extends FacadeITMockedThirdParties {
   }
 
   @Test
-  @Disabled
   void manager_read_ok() throws ApiException {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     PayingApi api = new PayingApi(manager1Client);
 
     Fee actualFee = api.getStudentFeeById(STUDENT1_ID, FEE1_ID);
-    List<Fee> actualFees1 = api.getStudentFees(STUDENT1_ID, 1, 10, null);
+    List<Fee> actualFees1 = api.getStudentFees(STUDENT1_ID, 1, 20, null);
     FeesWithStats actualFees2 =
         api.getFees(null, null, PAID.toString(), null, null, 1, 10, false, null);
 
@@ -259,29 +248,23 @@ class FeeIT extends FacadeITMockedThirdParties {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     PayingApi api = new PayingApi(manager1Client);
 
-    Fee updatedFee =
-        fee1().comment("M1 + M2 + M3").dueDatetime(Instant.parse("2021-11-09T10:10:10.00Z"));
+    Fee createdFee = api.createStudentFees(STUDENT1_ID, List.of(createFeeForTest())).getFirst();
 
-    List<Fee> actual = api.createStudentFees(STUDENT1_ID, List.of(creatableFee1()));
+    Fee updatedFee =
+        createdFee.comment("M1 + M2 + M3").dueDatetime(Instant.parse("2021-11-09T10:10:10.00Z"));
 
     List<Fee> actualUpdated = api.updateStudentFees(STUDENT1_ID, List.of(updatedFee));
 
-    List<Fee> expected = api.getStudentFees(STUDENT1_ID, 1, 10, null);
-    assertTrue(expected.containsAll(actual));
-
     assertEquals(1, actualUpdated.size());
-    assertEquals(actualUpdated.get(0).getComment(), updatedFee.getComment());
-    assertEquals(actualUpdated.get(0).getDueDatetime(), updatedFee.getDueDatetime());
-    assertTrue(expected.containsAll(actual));
+    assertEquals(actualUpdated.getFirst().getComment(), updatedFee.getComment());
+    assertEquals(actualUpdated.getFirst().getDueDatetime(), updatedFee.getDueDatetime());
 
-    List<Fee> crupdatedStudentFees =
-        api.crupdateStudentFees(List.of(creatableStudentFee(), updatableStudentFee()));
+    List<Fee> crupdatedStudentFees = api.crupdateStudentFees(List.of(creatableStudentFee()));
 
     List<Fee> student1Fees = api.getStudentFees(STUDENT1_ID, 1, 10, null);
 
-    assertEquals(2, crupdatedStudentFees.size());
+    assertEquals(1, crupdatedStudentFees.size());
     assertTrue(student1Fees.contains(crupdatedStudentFees.getFirst()));
-    assertEquals(crupdatedStudentFees.getLast().getComment(), updatableStudentFee().getComment());
   }
 
   @Test
@@ -313,7 +296,6 @@ class FeeIT extends FacadeITMockedThirdParties {
   }
 
   @Test
-  @Disabled("dirty")
   void manager_write_with_some_bad_fields_ko() throws ApiException {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     PayingApi api = new PayingApi(manager1Client);
